--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.0",
     "react-tsparticles": "^2.12.2",
+    "swiper": "^11.2.10",
     "tsparticles": "^3.9.1",
     "tsparticles-slim": "^2.12.0"
   },
